--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -56,6 +56,11 @@ jobs:
           source "$HOME/.rye/env"
           rye --version
 
+      - name: Install Uv
+        run: |
+          curl -LsSf https://astral.sh/uv/install.sh | sh
+          uv --version
+
       - name: Install Nox
         run: |
           pipx install nox
