--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,14 +39,14 @@ rye = { dev-dependencies = [
     "pytest>=8.0.2",
     "pytest-cov>=4.1.0",
     "ruff>=0.3.7",
-    "sphinx-autodoc-typehints>=2.0.0",
     "tqdm>=4.66.2",
     "types-attrs>=19.1.0",
     "xdoctest>=1.1.3",
-    "sphinx-rtd-theme>=2.0.0",
     "matplotlib>=3.7.5",
     "pre-commit>=3.5.0",
-    "sphinx>=7.1.2",
+    "sphinx<7",
+    "sphinx-autodoc-typehints<2",
+    "sphinx-rtd-theme>=2.0.0",
     "sphinx-autobuild>=2021.3.14",
 ] }
 
