--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,15 +38,15 @@ rye = { dev-dependencies = [
     "pydocstringformatter>=0.7.3",
     "pytest>=8.0.2",
     "pytest-cov>=4.1.0",
-    "ruff>=0.2.2",
-    "sphinx-autodoc-typehints>=2.0.0",
+    "ruff>=0.3.7",
     "tqdm>=4.66.2",
     "types-attrs>=19.1.0",
     "xdoctest>=1.1.3",
-    "sphinx-rtd-theme>=2.0.0",
     "matplotlib>=3.7.5",
     "pre-commit>=3.5.0",
-    "sphinx>=7.1.2",
+    "sphinx<7",
+    "sphinx-autodoc-typehints<2",
+    "sphinx-rtd-theme>=2.0.0",
     "sphinx-autobuild>=2021.3.14",
 ] }
 
@@ -79,7 +79,7 @@ exclude = [
 # Same as Black.
 line-length = 88
 
-# Assume Python 3.11
+# Assume Python 3.8
 target-version = "py38"
 
 [tool.ruff.lint]
