--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "numba>=0.58.1",
     "scipy>=1.10.1",
     "numpy>=1.24.4",
+    "contourpy>=1.1.1",
 ]
 classifiers = [
   "Development Status :: 5 - Production/Stable",
