--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -26,7 +26,7 @@ repos:
         name: mypy
         stages: [commit]
         language: system
-        entry: mypy .
+        entry: mypy src tests
         types: [python]
         require_serial: true
       - id: pydocstringformatter
