--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -6,18 +6,17 @@
 #   features: []
 #   all-features: false
 #   with-sources: false
-#   generate-hashes: false
 
 -e file:.
 alabaster==0.7.13
     # via sphinx
-asteval==0.9.33
+asteval==0.9.32
     # via lmfit
 attrs==23.2.0
     # via inscar
-babel==2.15.0
+babel==2.14.0
     # via sphinx
-certifi==2024.6.2
+certifi==2024.2.2
     # via requests
 cfgv==3.4.0
     # via pre-commit
@@ -25,10 +24,9 @@ charset-normalizer==3.3.2
     # via requests
 colorama==0.4.6
     # via sphinx-autobuild
-contourpy==1.2.1
-    # via inscar
+contourpy==1.1.1
     # via matplotlib
-coverage==7.5.3
+coverage==7.4.4
     # via pytest-cov
 cycler==0.12.1
     # via matplotlib
@@ -39,84 +37,91 @@ distlib==0.3.8
 docutils==0.19
     # via sphinx
     # via sphinx-rtd-theme
-exceptiongroup==1.2.1
+exceptiongroup==1.2.0
     # via pytest
-filelock==3.15.1
+filelock==3.13.4
     # via virtualenv
-fonttools==4.53.0
+fonttools==4.51.0
     # via matplotlib
-identify==2.5.36
+future==1.0.0
+    # via uncertainties
+identify==2.5.35
     # via pre-commit
 idna==3.7
     # via requests
 imagesize==1.4.1
     # via sphinx
 importlib-metadata==7.1.0
+    # via numba
     # via sphinx
 importlib-resources==6.4.0
     # via matplotlib
 iniconfig==2.0.0
     # via pytest
-jinja2==3.1.4
+jinja2==3.1.3
     # via sphinx
 kiwisolver==1.4.5
     # via matplotlib
 livereload==2.6.3
     # via sphinx-autobuild
-llvmlite==0.43.0
+llvmlite==0.41.1
     # via numba
-lmfit==1.3.1
+lmfit==1.3.0
 markupsafe==2.1.5
     # via jinja2
-matplotlib==3.9.0
-mypy==1.10.0
+matplotlib==3.7.5
+mypy==1.9.0
 mypy-extensions==1.0.0
     # via mypy
-nodeenv==1.9.1
+nodeenv==1.8.0
     # via pre-commit
-numba==0.60.0
+numba==0.58.1
     # via inscar
-numpy==2.0.0
+numpy==1.24.4
     # via contourpy
     # via inscar
     # via lmfit
     # via matplotlib
     # via numba
     # via scipy
-packaging==24.1
+packaging==24.0
     # via matplotlib
     # via pytest
     # via sphinx
 pillow==10.3.0
     # via matplotlib
-platformdirs==4.2.2
+platformdirs==4.2.0
     # via virtualenv
-pluggy==1.5.0
+pluggy==1.4.0
     # via pytest
 pre-commit==3.5.0
 pre-commit-hooks==4.6.0
 pydocstringformatter==0.7.3
-pygments==2.18.0
+pygments==2.17.2
     # via sphinx
 pyparsing==3.1.2
     # via matplotlib
-pytest==8.2.2
+pytest==8.1.1
     # via pytest-cov
 pytest-cov==5.0.0
 python-dateutil==2.9.0.post0
     # via matplotlib
+pytz==2024.1
+    # via babel
 pyyaml==6.0.1
     # via pre-commit
-requests==2.32.3
+requests==2.31.0
     # via sphinx
 ruamel-yaml==0.18.6
     # via pre-commit-hooks
 ruamel-yaml-clib==0.2.8
     # via ruamel-yaml
-ruff==0.4.9
-scipy==1.13.1
+ruff==0.3.7
+scipy==1.10.1
     # via inscar
     # via lmfit
+setuptools==69.5.1
+    # via nodeenv
 six==1.16.0
     # via livereload
     # via python-dateutil
@@ -150,19 +155,19 @@ tomli==2.0.1
     # via pre-commit-hooks
     # via pydocstringformatter
     # via pytest
-tornado==6.4.1
+tornado==6.4
     # via livereload
-tqdm==4.66.4
+tqdm==4.66.2
 types-attrs==19.1.0
-typing-extensions==4.12.2
+typing-extensions==4.11.0
     # via mypy
-uncertainties==3.2.1
+uncertainties==3.1.7
     # via lmfit
 urllib3==2.2.1
     # via requests
-virtualenv==20.26.2
+virtualenv==20.25.3
     # via pre-commit
-xdoctest==1.1.5
-zipp==3.19.2
+xdoctest==1.1.3
+zipp==3.18.1
     # via importlib-metadata
     # via importlib-resources
