--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,10 +1,8 @@
 name: Release
-
 on:
   push:
     branches:
       - main
-
 jobs:
   release:
     name: Release
@@ -14,28 +12,23 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 2
-
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.12"
-
       - name: Upgrade pip
         run: |
           pip install pip
           pip --version
-
       - name: Install Rye
         run: |
           curl -sSf https://rye.astral.sh/get | RYE_INSTALL_OPTION="--yes" bash
           source "$HOME/.rye/env"
           rye --version
-
       - name: Check if there is a parent commit
         id: check-parent-commit
         run: |
           echo "::set-output name=sha::$(git rev-parse --verify --quiet HEAD^)"
-
       - name: Detect and tag new version
         id: check-version
         if: steps.check-parent-commit.outputs.sha
@@ -43,7 +36,6 @@ jobs:
         with:
           version-command: |
             bash -o pipefail -c "source $HOME/.rye/env && rye version"
-
       - name: Bump version for developmental release
         if: "! steps.check-version.outputs.tag"
         run: |
@@ -51,27 +43,23 @@ jobs:
           rye version -b patch &&
           version=$(rye version) &&
           rye version $version.dev.$(date +%s)
-
       - name: Build package
         run: |
           source "$HOME/.rye/env"
           rye build
-
       - name: Publish package on PyPI
         if: steps.check-version.outputs.tag
         uses: pypa/gh-action-pypi-publish@v1.9.0
         with:
           user: __token__
           password: ${{ secrets.PYPI_TOKEN }}
-
-      - name: Publish package on TestPyPI
-        if: "! steps.check-version.outputs.tag"
-        uses: pypa/gh-action-pypi-publish@v1.9.0
-        with:
-          user: __token__
-          password: ${{ secrets.TEST_PYPI_TOKEN }}
-          repository_url: https://test.pypi.org/legacy/
-
+      # - name: Publish package on TestPyPI
+      #   if: "! steps.check-version.outputs.tag"
+      #   uses: pypa/gh-action-pypi-publish@v1.9.0
+      #   with:
+      #     user: __token__
+      #     password: ${{ secrets.TEST_PYPI_TOKEN }}
+      #     repository_url: https://test.pypi.org/legacy/
       - name: Publish the release notes
         uses: release-drafter/release-drafter@v6.0.0
         with:
