--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -3,8 +3,11 @@ version: 2
 sphinx:
   configuration: docs/conf.py
 formats: all
+build:
+  os: ubuntu-22.04
+  tools:
+    python: "3.9"
 python:
-  version: "3.8"
   install:
     - requirements: docs/requirements.txt
     - path: .
