--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,3 +1,4 @@
-sphinx==7.2.6
-sphinx-rtd-theme==2.0.0
+sphinx-autobuild==2021.3.14
 sphinx-autodoc-typehints==2.2.0
+sphinx-rtd-theme==2.0.0
+sphinx==7.3.7
