--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,10 +44,10 @@ rye = { dev-dependencies = [
     "xdoctest>=1.1.3",
     "matplotlib>=3.7.5",
     "pre-commit>=3.5.0",
-    "sphinx<7",
-    "sphinx-autodoc-typehints<2",
     "sphinx-rtd-theme>=2.0.0",
     "sphinx-autobuild>=2021.3.14",
+    "sphinx>=7.3.7",
+    "sphinx-autodoc-typehints>=2.2.0",
 ] }
 
 [tool.mypy]
